<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".picks"
    android:background="@color/bg_black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:text="@string/title_picks"
        android:textStyle = "bold"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="365dp"
        android:layout_height="543dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/cat_button"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_cinema_clapper"
                android:text="@string/cat_best_picture"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button2"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_director_chair"
                android:text="@string/cat_best_director"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button3"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_female"
                android:text="@string/cat_best_actress_in_a_leading_role"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button4"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_male"
                android:text="@string/cat_best_actor_in_a_leading_role"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button5"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_female"
                android:text="@string/cat_best_actress_in_a_supporting_role"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button6"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_male"
                android:text="@string/cat_best_actor_in_a_supporting_role"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button7"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_text_file"
                android:text="@string/cat_best_original_screenplay"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button8"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_text_file"
                android:text="@string/cat_best_adapted_screenplay"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button9"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_camera"
                android:text="@string/cat_best_cinematography"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/cat_button10"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:alpha="1"
                android:backgroundTint="@color/yellow"
                android:drawableLeft="@drawable/icon_cinema_clapper"
                android:text="@string/cat_best_documentary_feature"
                android:textAllCaps="false"
                android:textColor="@color/bg_black"
                android:textSize="23sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/share_results"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/bg_black"
        android:textAllCaps="false"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>